# arcan-protocol

./: .eslintrc.json  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  gen-history.sh  package.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: anchor-build.yml  ci.yml
docs/: agent-registration.md  architecture.md  routing-spec.md  settlement-spec.md
programs/arcan-router/: Cargo.toml
programs/arcan-router/src/: lib.rs
programs/arcan-settlement/: Cargo.toml
programs/arcan-settlement/src/: lib.rs
sdk/ts/: package.json
sdk/ts/src/: client.ts  index.ts  instructions.ts  types.ts
tests/: integration.test.ts  router.test.ts  settlement.test.ts
