[package]
name = "arcan-settlement"
version = "0.3.0"
description = "Arcan Protocol - Escrow settlement and dispute resolution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcan_settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
